Fix jumpy table

--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -65,3 +65,6 @@ table
 
 tbody tr:hover
   background-color: #eee
+
+.kill-row a
+  visibility: hidden
